--- a/src/templates/home/URLDeck/EditUTubDescriptionForm.html
+++ b/src/templates/home/URLDeck/EditUTubDescriptionForm.html
@@ -6,10 +6,10 @@
 <div class="createDiv flex-row full-width" id="UTubDescriptionEditWrap" style="display: none;">
 	<div class="text-input-container sixtyfive-width">
 		<div class="text-input-inner-container">
-			<input class="text-input edit" type="text" id="utubDescription" name="utubDescription" maxlength={{CONSTANTS.UTUBS.MAX_DESCRIPTION_LENGTH}} required>
+			<input class="text-input" type="text" id="utubDescriptionUpdate" name="utubDescription" maxlength={{CONSTANTS.UTUBS.MAX_DESCRIPTION_LENGTH}} required>
 			<label class="text-input-label" for="utubDescription">UTub Description</label>
 		</div>
-		<span class="text-input-error-message edit" id="utubDescription-error">This field is required.</span>
+		<span class="text-input-error-message" id="utubDescriptionUpdate-error">This field is required.</span>
 	</div>
 
 	<!-- Submit edit UTub description -->
