--- a/src/templates/home/URLDeck/EditUTubNameForm.html
+++ b/src/templates/home/URLDeck/EditUTubNameForm.html
@@ -1,10 +1,10 @@
 <div class="createDiv flex-row full-width pad-top-5p" style="display: none;">
 	<div class="text-input-container full-width">
 		<div class="text-input-inner-container">
-			<input class="text-input edit" type="text" id="utubName" name="utubName" minlength={{CONSTANTS.UTUBS.MIN_NAME_LENGTH}} maxlength={{CONSTANTS.UTUBS.MAX_NAME_LENGTH}} required>
+			<input class="text-input" type="text" id="utubNameUpdate" name="utubName" minlength={{CONSTANTS.UTUBS.MIN_NAME_LENGTH}} maxlength={{CONSTANTS.UTUBS.MAX_NAME_LENGTH}} required>
 			<label class="text-input-label" for="utubName">UTub Name</label>
 		</div>
-		<span class="text-input-error-message edit" id="utubName-error">This field is required.</span>
+		<span class="text-input-error-message" id="utubNameUpdate-error">This field is required.</span>
 	</div>
 
 	<!-- Submit edit UTub name -->
