--- a/src/templates/home/URLDeck/URLDeckHeader.html
+++ b/src/templates/home/URLDeck/URLDeckHeader.html
@@ -2,10 +2,10 @@
 
 	<div class="flex-row align-center sixtyfive-width">
 		<!-- Header -->
-		<div class="flex-row align-center" id="UTubNameEditWrap">
+		<div class="flex-row align-center" id="UTubNameUpdateWrap">
 			<h2 id="URLDeckHeader">URLs</h2>
 			<!-- Show Edit UTub name button -->
-			<i id="editUTubNameBtn" class="mx-1" style="display: none;">
+			<i id="updateUTubNameBtn" class="mx-1" style="display: none;">
 				<svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor"
 					class="bi bi-pencil-square editIcon" viewBox="0 0 16 16">
 					<path
@@ -17,7 +17,7 @@
 		</div>
 
 		<!-- Edit UTub name -->
-		{% include 'home/URLDeck/EditUTubNameForm.html' %}
+		{% include 'home/URLDeck/UpdateUTubNameForm.html' %}
 	</div>
 
 	<!-- Add URL button -->
