--- a/src/templates/home/URLDeck/URLDeckSubheader.html
+++ b/src/templates/home/URLDeck/URLDeckSubheader.html
@@ -2,7 +2,7 @@
 	<div class="flex-row align-center" id="UTubDescriptionSubheaderWrap">
 		<h5 id="URLDeckSubheader">Select a UTub</h5>
 		<!-- Edit UTub description button -->
-		<i id="editUTubDescriptionBtn" class="mx-1" style="display: none;">
+		<i id="updateUTubDescriptionBtn" class="mx-1" style="display: none;">
 			<svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor"
 				class="bi bi-pencil-square editIcon" viewBox="0 0 16 16">
 				<path
@@ -14,5 +14,5 @@
 	</div>
 
 	<!-- Edit UTub Description -->
-	{% include 'home/URLDeck/EditUTubDescriptionForm.html' %}
+	{% include 'home/URLDeck/UpdateUTubDescriptionForm.html' %}
 </div>
