--- a/src/templates/_routes_constants.html
+++ b/src/templates/_routes_constants.html
@@ -4,34 +4,34 @@
             if (!Routes.instance) {
                 // UTub routes
 
-                this.addUTub = "{{url_for('utubs.add_utub')}}";
+                this.createUTub = "{{url_for('utubs.create_utub')}}";
                 this.deleteUTub = (utub_id) => 
                     "{{url_for('utubs.delete_utub', utub_id=-1)}}".replace("-1", utub_id);
-                this.editUTubName = (utub_id) =>
+                this.updateUTubName = (utub_id) =>
                     "{{url_for('utubs.update_utub_name', utub_id=-1)}}".replace("-1", utub_id);
                 // 04/04/24 DP "update" --> "edit"
-                this.editUTubDescription = (utub_id) =>
+                this.updateUTubDescription = (utub_id) =>
                     "{{url_for('utubs.update_utub_desc', utub_id=-1)}}".replace("-1", utub_id);
 
                 // URL routes
-                this.addURL = (utub_id) =>
-                    "{{url_for('urls.add_url', utub_id=-1)}}".replace("-1", utub_id);
+                this.createURL = (utub_id) =>
+                    "{{url_for('urls.create_url', utub_id=-1)}}".replace("-1", utub_id);
                 this.deleteURL = (utub_id, utub_url_id) =>
                     "{{url_for('urls.remove_url', utub_id=-1, utub_url_id=-2)}}"
                         .replace("-1", utub_id)
                         .replace("-2", utub_url_id);
-                this.editURL = (utub_id, utub_url_id) =>
-                    "{{url_for('urls.edit_url', utub_id=-1, utub_url_id=-2)}}"
+                this.updateURL = (utub_id, utub_url_id) =>
+                    "{{url_for('urls.update_url', utub_id=-1, utub_url_id=-2)}}"
                         .replace("-1", utub_id)
                         .replace("-2", utub_url_id);
-                this.editURLTitle = (utub_id, utub_url_id) =>
-                    "{{url_for('urls.edit_url_title', utub_id=-1, utub_url_id=-2)}}"
+                this.updateURLTitle = (utub_id, utub_url_id) =>
+                    "{{url_for('urls.update_url_title', utub_id=-1, utub_url_id=-2)}}"
                         .replace("-1", utub_id)
                         .replace("-2", utub_url_id);
 
                 // Tag routes
-                this.addTag = (utub_id, utub_url_id) =>
-                    "{{url_for('tags.add_tag', utub_id=-1, utub_url_id=-2)}}"
+                this.createTag = (utub_id, utub_url_id) =>
+                    "{{url_for('tags.create_tag', utub_id=-1, utub_url_id=-2)}}"
                         .replace("-1", utub_id)
                         .replace("-2", utub_url_id);
                 this.removeTag = (utub_id, utub_url_id, tag_id) =>
@@ -47,25 +47,25 @@
                         .replace("-3", tag_id)
 
                 // Member routes
-                this.addMember = (utub_id) => 
-                    "{{url_for('members.add_member', utub_id=-1)}}".replace("-1", utub_id);
+                this.createMember = (utub_id) => 
+                    "{{url_for('members.create_member', utub_id=-1)}}".replace("-1", utub_id);
                 this.removeMember = (utub_id, user_id) => 
                     "{{url_for('members.remove_member', utub_id=-1, user_id=-4)}}"
                         .replace("-1", utub_id)
                         .replace("-4", user_id);
 
                 // Splash routes
-                this.login = () => "{{url_for('splash.login')}}";
-                this.register = () => "{{url_for('splash.register_user')}}";
-                this.confirmEmailAfterRegister = () => "{{url_for('splash.confirm_email_after_register')}}";
-                this.sendValidationEmail = () => "{{url_for('splash.send_validation_email')}}";
-                this.forgotPassword = () => "{{url_for('splash.forgot_password')}}";
+                this.login = "{{url_for('splash.login')}}";
+                this.register = "{{url_for('splash.register_user')}}";
+                this.confirmEmailAfterRegister = "{{url_for('splash.confirm_email_after_register')}}";
+                this.sendValidationEmail = "{{url_for('splash.send_validation_email')}}";
+                this.forgotPassword = "{{url_for('splash.forgot_password')}}";
                 
                 // Util routes
-                this.errorPage = () => "{{url_for('splash.error_page')}}";
+                this.errorPage = "{{url_for('splash.error_page')}}";
                 
                 // Logout
-                this.logout = () => "{{url_for('users.logout')}}";
+                this.logout = "{{url_for('users.logout')}}";
 
                 Routes.instance = this;
             }
