--- a/src/templates/_routes_constants.html
+++ b/src/templates/_routes_constants.html
@@ -35,13 +35,13 @@
                         .replace("-1", utub_id)
                         .replace("-2", utub_url_id);
                 this.removeTag = (utub_id, utub_url_id, tag_id) =>
-                    "{{url_for('tags.remove_tag', utub_id=-1, utub_url_id=-2, tag_id=-3)}}"
+                    "{{url_for('tags.delete_tag', utub_id=-1, utub_url_id=-2, tag_id=-3)}}"
                         .replace("-1", utub_id)
                         .replace("-2", utub_url_id)
                         .replace("-3", tag_id);
                 // 04/04/24 DP "modify" --> "edit"
-                this.editTag = (utub_id, utub_url_id, tag_id) =>
-                    "{{url_for('tags.modify_tag_on_url', utub_id=-1, utub_url_id=-2, tag_id=-3)}}"
+                this.updateTagOnUrl = (utub_id, utub_url_id, tag_id) =>
+                    "{{url_for('tags.update_tag_on_url', utub_id=-1, utub_url_id=-2, tag_id=-3)}}"
                         .replace("-1", utub_id)
                         .replace("-2", utub_url_id)
                         .replace("-3", tag_id)
