--- a/src/templates/home/MemberDeck/MemberDeck.html
+++ b/src/templates/home/MemberDeck/MemberDeck.html
@@ -4,8 +4,8 @@
 	{% include 'home/MemberDeck/MemberDeckHeaders.html' %}
 
 	<div class="flex-column content">
-		<!-- Add Member Form -->
-		{% include 'home/MemberDeck/AddMemberForm.html' %}
+		<!-- Create Member Form -->
+		{% include 'home/MemberDeck/CreateMemberForm.html' %}
 
 		<!-- Member Deck Content -->
 		<div id="displayMemberWrap" class="flex-column pad-in-15p">
