--- a/src/templates/home/MemberDeck/MemberDeckHeaders.html
+++ b/src/templates/home/MemberDeck/MemberDeckHeaders.html
@@ -4,7 +4,7 @@
 	</div>
 	<div class="col-6 col-lg-6 d-flex flex-row icon-holder">
 		<!-- Add user button -->
-		<i id="addMemberBtn" class="green-clickable ms-1">
+		<i id="memberBtnCreate" class="green-clickable ms-1">
 			<svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bi bi-plus-square-fill"
 				width="30" height="30" viewBox="0 0 16 16">
 				<path
@@ -12,7 +12,7 @@
 			</svg>
 		</i>
 		<!-- Leave UTub button -->
-		<i id="leaveUTubBtn" style="display: none;">
+		<i id="memberSelfBtnDelete" style="display: none;">
 			<svg xmlns="http://www.w3.org/2000/svg" fill="white" class="trash-fill" 
 				height="30px" width="30px" viewBox="0 -960 960 960">
 				<path 
