--- a/src/templates/home/TagsDeck/TagsDeck.html
+++ b/src/templates/home/TagsDeck/TagsDeck.html
@@ -14,8 +14,8 @@
 				</svg>
 			</i> -->
 
-			<!-- Edit Tag button -->
-			<!-- <i id="editTagButton" class="mx-1" style="display: none; color: #545454">
+			<!-- Update Tag button -->
+			<!-- <i id="updateTagButton" class="mx-1" style="display: none; color: #545454">
 				<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor"
 					class="bi bi-pencil-square" viewBox="0 0 16 16">
 					<path
