--- a/src/templates/home/URLDeck/URLDeck.html
+++ b/src/templates/home/URLDeck/URLDeck.html
@@ -17,7 +17,7 @@
 				<!-- Selected URL will be highlighted here -->
 				<!-- Element to create a new URL -->
 				<div class="createDiv cardCol mb-3 col-md-10 col-lg-10 col-xl-10" style="display: none;">
-					<div class="card selected" urlid="0" id="addURL" ondrop="dropIt(event)" ondragover="allowDrop(event)" ondragstart="dragStart(event)">
+					<div class="card selected" urlid="0" id="createURL" ondrop="dropIt(event)" ondragover="allowDrop(event)" ondragstart="dragStart(event)">
 						<div class="card-body URLInfo">
 							<fieldset class="form-group">
 								<div class="text-input-container sixtyfive-width">
@@ -54,16 +54,16 @@
 						<div class="card-body URLTags">
 							<div style="display: none" class="createDiv row">
 								<div class="col-3 col-lg-3 mb-md-0">
-									<input type="text" placeholder="Attribute Tag to URL" class="tag userInput addTag">
+									<input type="text" placeholder="Attribute Tag to URL" class="tag userInput createTag">
 								</div>
 								<div class="col-3 col-lg-3 mb-md-0 text-right d-flex flex-row">
-									<i class="mx-1 green-clickable submitAddTag">
+									<i class="mx-1 green-clickable tagSubmitBtnCreate">
 										<svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bi bi-check-square-fill" viewBox="0 0 16 16" width="24" height="24">
 											<path d="M2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2zm10.03 4.97a.75.75 0 0 1 .011 1.05l-3.992 4.99a.75.75 0 0 1-1.08.02L4.324 8.384a.75.75 0 1 1 1.06-1.06l2.094 2.093 3.473-4.425a.75.75 0 0 1 1.08-.022z">
 											</path>
 										</svg>
 									</i>
-									<i class="mx-1 cancelAddTag">
+									<i class="mx-1 tagCancelBtnCreate">
 										<svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bi bi-x-square-fill cancelButton" viewBox="0 0 16 16" width="24" height="24">
 											<path d="M2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2zm3.354 4.646L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 1 1 .708-.708">
 											</path>
@@ -73,8 +73,8 @@
 							</div>
 						</div>
 						<div class="card-body URLOptions">
-							<button id="SubmitNewURLBtn" class="card-link btn green-clickable-wide btn-text-on-hvr" type="button">Add URL</button>
-							<button id="CancelAddURLBtn" class="card-link btn cancelButton-wide btn-text-on-hvr" type="button">Cancel</button>
+							<button id="urlSubmitBtnCreate" class="card-link btn green-clickable-wide btn-text-on-hvr" type="button">Add URL</button>
+							<button id="urlCancelBtnCreate" class="card-link btn cancelButton-wide btn-text-on-hvr" type="button">Cancel</button>
 						</div>
 					</div>
 				</div>
