--- a/src/templates/home/URLDeck/URLDeckHeader.html
+++ b/src/templates/home/URLDeck/URLDeckHeader.html
@@ -4,10 +4,10 @@
 		<!-- Header -->
 		<div class="flex-row align-center" id="UTubNameUpdateWrap">
 			<h2 id="URLDeckHeader">URLs</h2>
-			<!-- Show Edit UTub name button -->
-			<i id="updateUTubNameBtn" class="mx-1" style="display: none;">
+			<!-- Show Update UTub name button -->
+			<i id="utubNameBtnUpdate" class="mx-1" style="display: none;">
 				<svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor"
-					class="bi bi-pencil-square editIcon" viewBox="0 0 16 16">
+					class="bi bi-pencil-square updateIcon" viewBox="0 0 16 16">
 					<path
 						d="M15.502 1.94a.5.5 0 0 1 0 .706L14.459 3.69l-2-2L13.502.646a.5.5 0 0 1 .707 0l1.293 1.293zm-1.75 2.456-2-2L4.939 9.21a.5.5 0 0 0-.121.196l-.805 2.414a.25.25 0 0 0 .316.316l2.414-.805a.5.5 0 0 0 .196-.12l6.813-6.814z" />
 					<path fill-rule="evenodd"
@@ -16,13 +16,13 @@
 			</i>
 		</div>
 
-		<!-- Edit UTub name -->
+		<!-- Update UTub name -->
 		{% include 'home/URLDeck/UpdateUTubNameForm.html' %}
 	</div>
 
-	<!-- Add URL button -->
+	<!-- Create URL button -->
 	<div class="col-3 col-lg-3 d-flex flex-row icon-holder">
-		<i id="addURLBtn" class="green-clickable" style="display: none;">
+		<i id="urlBtnCreate" class="green-clickable" style="display: none;">
 			<svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor"
 				class="bi bi-plus-square-fill" viewBox="0 0 16 16">
 				<path
