--- a/src/templates/home/UTubDeck/UTubDeck.html
+++ b/src/templates/home/UTubDeck/UTubDeck.html
@@ -4,8 +4,8 @@
 		{% include 'home/UTubDeck/UTubDeckHeaders.html' %}
 
         <div class="flex-column content">
-			<!-- Add UTub Form -->
-			{% include 'home/UTubDeck/AddUTubForm.html' %}
+			<!-- Create UTub Form -->
+			{% include 'home/UTubDeck/CreateUTubForm.html' %}
             <div class="pad-in-15p" id="listUTubs">
                 <!-- UTubs -->
             </div>
