--- a/src/templates/home/MemberDeck/CreateMemberForm.html
+++ b/src/templates/home/MemberDeck/CreateMemberForm.html
@@ -1,4 +1,4 @@
-<div id="addMemberWrap" class="input-text-holder flex-column createDiv pad-in-15p" style="display: none;">
+<div id="createMemberWrap" class="input-text-holder flex-column createDiv pad-in-15p" style="display: none;">
 	<div class="text-input-container">
 		<div class="text-input-inner-container">
 			<input class="text-input" type="text" id="usernameCreate" name="username" minlength={{CONSTANTS.USERS.MIN_USERNAME_LENGTH}} maxlength={{CONSTANTS.USERS.MAX_USERNAME_LENGTH}} required>
@@ -7,15 +7,15 @@
 		<span class="text-input-error-message" id="usernameCreate-error">This field is required.</span>
 	</div>
 	<div class="flex-row justify-center" style="gap: 8px; flex: 1 1 auto; align-items: flex-end;">
-		<!-- Checkbox to add member -->
-		<i class="green-clickable-wide half-width flex-column align-center justify-center border-radius-5px" id="submitAddMember">
+		<!-- Checkbox to create member -->
+		<i class="green-clickable-wide half-width flex-column align-center justify-center border-radius-5px" id="memberSubmitBtnCreate">
 			<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" width="30px" height="30px">
 				<!--!Font Awesome Free 6.5.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
 				<path d="M438.6 105.4c12.5 12.5 12.5 32.8 0 45.3l-256 256c-12.5 12.5-32.8 12.5-45.3 0l-128-128c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0L160 338.7 393.4 105.4c12.5-12.5 32.8-12.5 45.3 0z"/>
 			</svg>
 		</i>
-		<!-- X to cancel adding member -->
-		<i class="cancelButton-wide half-width flex-column align-center justify-center border-radius-5px" id="cancelAddMember">
+		<!-- X to cancel creating member -->
+		<i class="cancelButton-wide half-width flex-column align-center justify-center border-radius-5px" id="memberCancelBtnCreate">
 			<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512" width="30px" height="30px">
 				<!--!Font Awesome Free 6.5.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license/free Copyright 2024 Fonticons, Inc.-->
 				<path d="M342.6 150.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L192 210.7 86.6 105.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L146.7 256 41.4 361.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L192 301.3 297.4 406.6c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L237.3 256 342.6 150.6z"/>
