--- a/src/templates/home/URLDeck/UpdateUTubDescriptionForm.html
+++ b/src/templates/home/URLDeck/UpdateUTubDescriptionForm.html
@@ -1,9 +1,9 @@
 
-<!-- Shown when editing UTub title and UTub has no description -->
-<p id="URLDeckSubheaderAddDescription" style="display: none;">Add a description?</p>
+<!-- Shown when updating UTub title and UTub has no description -->
+<p id="URLDeckSubheaderCreateDescription" style="display: none;">Add a description?</p>
 
-<!-- Form to edit UTub Description -->
-<div class="createDiv flex-row full-width" id="UTubDescriptionEditWrap" style="display: none;">
+<!-- Form to update UTub Description -->
+<div class="createDiv flex-row full-width" id="UTubDescriptionUpdateWrap" style="display: none;">
 	<div class="text-input-container sixtyfive-width">
 		<div class="text-input-inner-container">
 			<input class="text-input" type="text" id="utubDescriptionUpdate" name="utubDescription" maxlength={{CONSTANTS.UTUBS.MAX_DESCRIPTION_LENGTH}} required>
@@ -12,7 +12,7 @@
 		<span class="text-input-error-message" id="utubDescriptionUpdate-error">This field is required.</span>
 	</div>
 
-	<!-- Submit edit UTub description -->
+	<!-- Submit update UTub description -->
 	<i id="utubDescriptionSubmitBtnUpdate" class="green-clickable mx-1 py-2">
 		<svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor"
 			class="bi bi-check-square-fill" viewBox="0 0 16 16">
@@ -21,7 +21,7 @@
 		</svg>
 	</i>
 
-	<!-- Cancel edit UTub description -->
+	<!-- Cancel update UTub description -->
 	<i class="mx-1 py-2" id="utubDescriptionCancelBtnUpdate">
 		<svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bi bi-x-square-fill cancelButton" viewBox="0 0 16 16" width="30" height="30">
 			<path d="M2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2zm3.354 4.646L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 1 1 .708-.708">
