--- a/src/templates/home/URLDeck/UpdateUTubNameForm.html
+++ b/src/templates/home/URLDeck/UpdateUTubNameForm.html
@@ -7,7 +7,7 @@
 		<span class="text-input-error-message" id="utubNameUpdate-error">This field is required.</span>
 	</div>
 
-	<!-- Submit edit UTub name -->
+	<!-- Submit update UTub name -->
 	<i id="utubNameSubmitBtnUpdate" class="green-clickable mx-1 py-2">
 		<svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="currentColor"
 			class="bi bi-check-square-fill" viewBox="0 0 16 16">
@@ -16,7 +16,7 @@
 		</svg>
 	</i>
 
-	<!-- Cancel edit UTub name -->
+	<!-- Cancel update UTub name -->
 	<i class="mx-1 py-2" id="utubNameCancelBtnUpdate">
 		<svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bi bi-x-square-fill cancelButton" viewBox="0 0 16 16" width="30" height="30">
 			<path d="M2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2zm3.354 4.646L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 1 1 .708-.708">
