--- a/src/templates/home/UTubDeck/UTubDeckHeaders.html
+++ b/src/templates/home/UTubDeck/UTubDeckHeaders.html
@@ -6,7 +6,7 @@
     <!-- Icons -->
     <div class="flex-row icon-holder">
         <!-- Create UTub button -->
-        <i id="createUTubBtn" class="mx-1">
+        <i id="utubBtnCreate" class="mx-1">
             <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bi bi-plus-square-fill green-clickable" width="30" height="30"
                 viewBox="0 0 16 16">
                 <path
@@ -15,7 +15,7 @@
         </i>
 
         <!-- Delete UTub button -->
-        <i id="deleteUTubBtn" class="ms-1" style="display:none">
+        <i id="utubBtnDelete" class="ms-1" style="display:none">
             <svg xmlns="http://www.w3.org/2000/svg" height="30" viewBox="0 -960 960 960" width="30" fill="black" class="bi trash-fill text-danger">
                 <path d="m376-300 104-104 104 104 56-56-104-104 104-104-56-56-104 104-104-104-56 56 104 104-104 104 56 56Zm-96 180q-33 0-56.5-23.5T200-200v-520h-40v-80h200v-40h240v40h200v80h-40v520q0 33-23.5 56.5T680-120H280Zm400-600H280v520h400v-520Zm-400 0v520-520Z"/>
             </svg>
