--- a/src/templates/home/MemberDeck/CreateMemberForm.html
+++ b/src/templates/home/MemberDeck/CreateMemberForm.html
@@ -1,10 +1,10 @@
 <div id="createMemberWrap" class="input-text-holder flex-column createDiv pad-in-15p" style="display: none;">
 	<div class="text-input-container">
 		<div class="text-input-inner-container">
-			<input class="text-input" type="text" id="usernameCreate" name="username" minlength={{CONSTANTS.USERS.MIN_USERNAME_LENGTH}} maxlength={{CONSTANTS.USERS.MAX_USERNAME_LENGTH}} required>
+			<input class="text-input" type="text" id="memberCreate" name="username" minlength={{CONSTANTS.USERS.MIN_USERNAME_LENGTH}} maxlength={{CONSTANTS.USERS.MAX_USERNAME_LENGTH}} required>
 			<label class="text-input-label" for="username">Username</label>
 		</div>
-		<span class="text-input-error-message" id="usernameCreate-error">This field is required.</span>
+		<span class="text-input-error-message" id="memberCreate-error">This field is required.</span>
 	</div>
 	<div class="flex-row justify-center" style="gap: 8px; flex: 1 1 auto; align-items: flex-end;">
 		<!-- Checkbox to create member -->
