--- a/src/templates/_routes_constants.html
+++ b/src/templates/_routes_constants.html
@@ -84,6 +84,10 @@
                 this.UTUBS_MIN_NAME_LENGTH = {{CONSTANTS.UTUBS.MIN_NAME_LENGTH}};
                 this.UTUBS_MAX_DESCRIPTION_LENGTH = {{CONSTANTS.UTUBS.MAX_DESCRIPTION_LENGTH}}
 
+                // URL Constants
+                this.URLS_TITLE_MIN_LENGTH = {{CONSTANTS.URLS.MIN_URL_TITLE_LENGTH}}
+                this.URLS_TITLE_MAX_LENGTH = {{CONSTANTS.URLS.MAX_URL_TITLE_LENGTH}}
+
                 Constants.instance = this;
             }
 
