--- a/src/templates/home/URLDeck/URLDeck.html
+++ b/src/templates/home/URLDeck/URLDeck.html
@@ -10,6 +10,7 @@
 		<!-- URLs above selected URL will be displayed here -->
 		<p class="pad-in-15p" id="NoURLsSubheader" style="display: none; padding-top: 1rem;">No URLs here - add one!</p>
 		<div id="listURLs">
+			<h5 class="flex-row justify-center" id="URLDeckErrorIndicator" tabindex="-1">Check me out here</h5>
 			<!-- Create URL Form -->
 			{% include 'home/URLDeck/CreateURLForm.html' %}
 			<!-- All URLs otherwise go here -->
